fix: `LinkButton` spacing

--- a/framework/core/less/common/Button.less
+++ b/framework/core/less/common/Button.less
@@ -40,11 +40,14 @@
 // Buttons
 // --------------------------------------------------
 
-.Button {
+.Button, .LinkButton {
   display: inline-flex;
   align-items: center;
-  justify-content: center;
   gap: 7px;
+}
+
+.Button {
+  justify-content: center;
   margin-bottom: 0; // For input.btn
   text-align: center;
   vertical-align: middle;
